# Macro-Keyboard-Spotify-Interface

./: .gitignore  pyproject.toml  requirements-linux.txt  requirements-win.txt  requirements.txt
src/app/: main.py
src/app/config/: settings.py
src/app/core/: actions.py  controller.py  router.py
src/app/input/: base.py  fake_serial.py  hotkeys_pynput.py
src/app/services/: spotify_client.py
src/app/ui/: background_widget.py  image_loader.py  main_window.py
