[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "MacroKeyboardSpotifyInterface"
version = "0.1.0"
description = "Macro keyboard Spotify Interface"
requires-python = ">=3.10"

dependencies = [
    "altgraph==0.17.5",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "idna==3.11",
    "packaging==25.0",
    "platformdirs==4.5.1",
    "pyinstaller==6.17.0",
    "pyinstaller-hooks-contrib==2025.11",
    "pynput==1.8.1",
    "pyserial==3.5",
    "PySide6==6.10.1",
    "PySide6_Addons==6.10.1",
    "PySide6_Essentials==6.10.1",
    "redis==7.1.0",
    "requests==2.32.5",
    "shiboken6==6.10.1",
    "six==1.17.0",
    "spotipy==2.25.2",
    "urllib3==2.6.2",

    # Linux only
    'evdev==1.9.2; platform_system=="Linux"',
    'python-xlib==0.33; platform_system=="Linux"'
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
